k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xploreml
  labels:
    name: xploreml
    app: xploreml
    environment: production
    version: v2.0.0
---
