k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xploreml-service
  namespace: xploreml
  labels:
    app: xploreml
    component: webapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8501
    protocol: TCP
    name: http
  selector:
    app: xploreml
    component: webapp
---
